@@ -11,6 +11,8 @@
         - Add pages to references in snippet view. (diewald)
         - Added category to Piwik calls. (diewald)
         - Add SpaCy with STTS to annotation assistant. (diewald)
+        - Add fields to search API (necessary
+          for future Kustvakt releases). (diewald)
 
 0.54 2024-06-10
         - Remove deprecated 'matchInfo' API path. (diewald, margaretha)
